fix: fix sidebar overflow and styles in main

--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -1,3 +1,7 @@
+html {
+  overflow-x: hidden;
+}
+
 *,
 *::after,
 *::before {
@@ -22,6 +26,7 @@
 body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 .container {
@@ -72,6 +77,7 @@ body {
 header {
   margin-top: 60px;
   z-index: 1;
+  position: relative;
 }
 
 header .container {
@@ -151,11 +157,11 @@ header .container {
     width: 30px;
     height: 22px;
     border: 0;
-    border-top: 2px solid #000000;
+    border-top: 2px solid var(--color-primary);
     background: transparent;
     position: relative;
     position: absolute;
-    top: 49px;
+    top: 19px;
     right: 53px;
     z-index: 5;
   }
@@ -167,7 +173,7 @@ header .container {
     top: 0;
     left: 0;
     width: 100%;
-    border-top: 2px solid #000000;
+    border-top: 2px solid var(--color-primary);
     transform: translateY(8px);
   }
 
@@ -185,12 +191,12 @@ header .container {
     width: 320px;
     height: 100vh;
     position: absolute;
-    top: 0;
+    top: -30px;
     right: -320px;
     transition: all 400ms ease-in-out;
     padding-top: 30px;
     padding-left: 10px;
-    background-color: var(--color-light-xl);
+    background-color: var(--color-dark-3xl);
   }
 
   .sidebar-menu.open-menu {
@@ -215,11 +221,10 @@ header .container {
     font-weight: 400;
     font-size: 32px;
     line-height: 160%;
-    color: var(--color-dark-l);
+    color: var(--color-light-s);
   }
 
   .sidebar-nav a.active-link {
-    color: var(--color-dark-3xl);
     border-bottom: 3px solid var(--color-primary);
     padding-bottom: 4px;
   }
